# FeatUp

./: .gitignore  build.py  hubconf.py  pyproject.toml  setup.py
featup/: train_implicit_upsampler.py  train_jbu_upsampler.py  upsamplers.py
featup/configs/: jbu_upsampler.yaml
featup/datasets/: HighResEmbs.py
featup/featurizers/: util.py
