[tool.poetry]
name = "featup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
kornia = "^0.7.2"
omegaconf = "^2.3.0"
pytorch-lightning = "^2.2.1"
torchvision = "^0.17.1"
tqdm = "^4.66.2"
torchmetrics = "^1.3.2"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
timm = "0.4.12"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core", "setuptools", "torch"]
# build-backend = "poetry.core.masonry.api"
